chore: :package: add absolute path

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,20 @@
 {
   "parser": "babel-eslint",
+  "settings": {
+    "import/resolver": {
+      "alias": {
+        "map": [
+          ["@/components", "./src/components"],
+          ["@/contexts", "./src/contexts"],
+          ["@/layout", "./src/layout"],
+          ["@/hooks", "./src/utils/hooks"],
+          ["@/config", "./src/utils/config"],
+          ["@/utils", "./src/utils"],
+          ["@/svg", "./asset/images/svg"]
+        ]
+      }
+    }
+  },
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
