--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@next/bundle-analyzer": "^10.0.6",
     "@zeit/next-source-maps": "0.0.3",
+    "autoprefixer": "^10.2.4",
     "next": "^10.0.6",
     "next-compose-plugins": "^2.2.1",
+    "postcss": "^8.2.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.32.6"
+    "sass": "^1.32.6",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -35,8 +38,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
+    "postcss-preset-env": "^6.7.0",
     "stylelint": "^13.9.0",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-recommended": "^3.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.18.0",
     "webpack": "^5.21.0"
