--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "@next/bundle-analyzer": "^10.0.6",
     "@zeit/next-source-maps": "0.0.3",
     "axios": "^0.21.1",
