--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@next/bundle-analyzer": "^10.0.6",
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
+    "axios": "^0.21.1",
+    "mobx": "^6.1.8",
+    "mobx-react": "^7.1.0",
+    "mobx-react-lite": "^3.2.0",
     "next": "^10.0.6",
     "next-compose-plugins": "^2.2.1",
     "postcss": "^8.2.5",
@@ -26,6 +30,8 @@
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.19.0",
