--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "next": "^10.0.6",
     "next-compose-plugins": "^2.2.1",
     "postcss": "^8.2.5",
@@ -25,7 +26,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.32.6",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "throttle": "^1.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
