add serverless domain

--- a/.serverless_nextjs/default-lambda/routes-manifest.json
+++ b/.serverless_nextjs/default-lambda/routes-manifest.json
@@ -1,1 +1,1 @@
-{"version":3,"pages404":true,"basePath":"","redirects":[],"rewrites":[],"headers":[],"dynamicRoutes":[],"dataRoutes":[{"page":"/","dataRouteRegex":"^/_next/data/BQ28O_ZQ_pywI_b5kWCmS/index.json$"}]}
+{"version":3,"pages404":true,"basePath":"","redirects":[],"rewrites":[],"headers":[],"dynamicRoutes":[],"dataRoutes":[{"page":"/home","dataRouteRegex":"^/_next/data/wVBk8OzzHHNWM\\-rzji5N\\-/home.json$"}]}
