--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,7 @@
 slsNextApp:
   component: '@sls-next/serverless-component@1.18.0'
   inputs:
+    domain: ["www", "mix-in.net"]
     bucketName: 'mixin-front2'
     cloudfront:
       distributionId: E3JDQ3YRX14XWN
