--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.2",
     "sass": "^1.32.6",
     "serverless": "^2.35.0",
     "tailwindcss": "^2.0.3"
