--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-toastify": "^7.0.4",
+    "react-google-login": "^5.2.2",
     "sass": "^1.32.6",
     "serverless": "^2.35.0",
     "tailwindcss": "^2.0.3"
