--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
     "mobx-react-lite": "^3.2.0",
