--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
+    "@babel/runtime": "^7.14.0",
     "@next/bundle-analyzer": "^10.0.6",
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
