--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
@@ -29,8 +30,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-toastify": "^7.0.4",
     "react-google-login": "^5.2.2",
+    "react-toastify": "^7.0.4",
     "sass": "^1.32.6",
     "serverless": "^2.35.0",
     "tailwindcss": "^2.0.3"
