--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development next -p 3060",
+    "dev": "cross-env NODE_ENV=development NODE_OPTIONS='--inspect' next -p 3060",
     "build": "cross-env ANALYZE=true NODE_ENV=production next build",
     "start": "cross-env NODE_ENV=production next start -p 3060",
     "deploy": "serverless",
@@ -26,6 +26,7 @@
     "mobx-react-lite": "^3.2.0",
     "next": "^10.0.6",
     "next-compose-plugins": "^2.2.1",
+    "next-cookie": "^2.6.2",
     "postcss": "^8.2.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
