--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.5",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "mobx": "^6.1.8",
