--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   "dependencies": {
     "@babel/runtime": "^7.14.0",
     "@next/bundle-analyzer": "^10.0.6",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.0.0-alpha.0",
+    "@toast-ui/react-editor": "^2.5.3",
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
     "dayjs": "^1.10.5",
+    "highlight.js": "^11.0.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
     "mobx-react-lite": "^3.2.0",
-    "next": "^10.0.6",
+    "next": "^10.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-cookie": "^2.6.2",
     "postcss": "^8.2.5",
