--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/runtime": "^7.14.0",
     "@next/bundle-analyzer": "^10.0.6",
+    "@svgr/webpack": "^5.5.0",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.0.0-alpha.0",
     "@toast-ui/react-editor": "^2.5.3",
     "@zeit/next-source-maps": "0.0.3",
@@ -38,8 +39,8 @@
     "react-google-login": "^5.2.2",
     "react-toastify": "^7.0.4",
     "sass": "^1.32.6",
-    "serverless": "^2.35.0",
-    "tailwindcss": "^2.0.3"
+    "serverless": "^2.48.0",
+    "tailwindcss": "^2.2.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
